# computer-vision

tarea-1/: canny_edge_detection.py
tarea-2/: .gitignore  README.md  detector_yolo_extra_features.py  text_character_detection.py  train_custom_yolo.py  yolo_realtime.py  yolov12_realtime.py
tarea-3/: .gitignore  README.md  biometric_gui.py  biometric_selector.py  capture_faces.py  extract_embeddings.py  extract_facenet_embeddings.py  main.py  pyproject.toml  realtime_match_facenet.py  realtime_match_lbph.py
task-1/: README.md  canny_edge_detection.py  canny_edge_realtime.py
