[project]
name = "tarea-3"
version = "0.1.0"
description = "Sistema de reconocimiento facial con LBPH (Visión Clásica) + FaceNet (Deep Learning)"
readme = "README.md"
authors = [
    { name = "CristhianMotoche", email = "cristhian.motoche@gmail.com" }
]
keywords = ["computer-vision", "face-recognition", "opencv", "facenet", "lbph", "biometric"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "keras-facenet>=0.3.2",
    "mtcnn>=1.0.0",
    "numpy>=2.4.1",
    "opencv-contrib-python>=4.13.0.90",
    "opencv-python>=4.13.0.90",
    "scipy>=1.17.0",
    "tensorflow>=2.20.0",
]
